task2/ingress-monitoring.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-monitoring
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: promstack-grafana 
          servicePort: 80
